Put governance.html into an about subfolder

--- a/src/dynamic/pages/about.html.md.ejs
+++ b/src/dynamic/pages/about.html.md.ejs
@@ -28,7 +28,7 @@ The CoApp project is hosted on [GitHub](http://github.com) under the organizatio
 
 ## Governance
 
-To facilitate community involvement, the CoApp project has a [public governance model](governance.html). The governance model describes how project decisions are made and how project members can earn additional responsibilities.
+To facilitate community involvement, the CoApp project has a [public governance model](/about/governance.html). The governance model describes how project decisions are made and how project members can earn additional responsibilities.
 
 ## Contact
 
