extend example for include files nested in a subfolder

--- a/src/dynamic/reference/autopackage-ref.html.md.ejs
+++ b/src/dynamic/reference/autopackage-ref.html.md.ejs
@@ -372,6 +372,15 @@ nuget {
             #destination = ${d_include}\mylib;
              "inc\*.h"
         };
+        // for another nested include subfolder
+        nestedIncludeFoo: {
+            #destination = ${d_include}\foo;
+             "foo\inc\*.h"
+        };
+        nestedBarInclude: {
+            #destination = ${d_include}\bar;
+             "bar\inc\*.h"
+        };
     };
 };
 
