change in reference to the comment of Michal

--- a/src/dynamic/reference/autopackage-ref.html.md.ejs
+++ b/src/dynamic/reference/autopackage-ref.html.md.ejs
@@ -369,16 +369,16 @@ nuget {
         
         // use this:
         nestedInclude: {
-            #destination = ${d_include}\mylib;
+            #destination = ${d_include}mylib;
              "inc\*.h"
         };
         // for another nested include subfolder
         nestedIncludeFoo: {
-            #destination = ${d_include}\foo;
+            #destination = ${d_include}foo;
              "foo\inc\*.h"
         };
         nestedBarInclude: {
-            #destination = ${d_include}\bar;
+            #destination = ${d_include}bar;
              "bar\inc\*.h"
         };
     };
